Fixed dropdown content covering header --mobile version bug

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ body {
     position: absolute;
     width: 100vw;
     right: 0;
+    top: 50px;
     box-shadow: 0px 6px 8px 0px rgba(0,0,0,0.2);
     overflow: hidden;
     opacity: 0;
